[gd_scene load_steps=10 format=3 uid="uid://5idhgy3je8jq"]

[ext_resource type="Script" uid="uid://bkmeayo5fk5yc" path="res://scenes/game/playfield/notes/pixel_note.gd" id="1_8i8cq"]
[ext_resource type="SpriteFrames" uid="uid://camlsykf7yoai" path="res://assets/game/notetypes/funkin/pixel/arrows-pixels.tres" id="2_8i8cq"]
[ext_resource type="SpriteFrames" uid="uid://ckoaftrcoo2q1" path="res://assets/game/notetypes/funkin/pixel/pixelNoteSplash.res" id="3_8i8cq"]

[sub_resource type="Animation" id="Animation_fer4d"]
resource_name = "0"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"purple tap"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cusb7"]
resource_name = "1"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"blue tap"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j2xfe"]
resource_name = "2"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"green tap"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f2bup"]
resource_name = "3"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"red tap"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5wcya"]
length = 0.0416708
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arrowDOWN"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpqa0"]
_data = {
&"0": SubResource("Animation_fer4d"),
&"1": SubResource("Animation_cusb7"),
&"2": SubResource("Animation_j2xfe"),
&"3": SubResource("Animation_f2bup"),
&"RESET": SubResource("Animation_5wcya")
}

[node name="pixel" type="Node2D"]
texture_filter = 1
script = ExtResource("1_8i8cq")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lpqa0")
}

[node name="clip_rect" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_right = 45.0
offset_bottom = 900.0
scale = Vector2(9, 9)

[node name="hold_body" type="TextureRect" parent="clip_rect"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 810.0

[node name="hold_tail" type="TextureRect" parent="clip_rect"]
unique_name_in_owner = true
layout_mode = 0

[node name="arrow" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(9, 9)
sprite_frames = ExtResource("2_8i8cq")
animation = &"arrowDOWN"

[node name="splash" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_8i8cq")
animation = &"purple1"
